--- a/0x01-variables_if_else_while/101-print_comb4.c.2
+++ b/0x01-variables_if_else_while/101-print_comb4.c.2
@@ -10,7 +10,12 @@
 
 int main(void)
 {
-	int hundo, tens, ones, tenscount, onescount, countcoun;
+	int hundo;
+	int tens;
+	int ones;
+	int tenscount;
+	int onescount;
+	int countcount;
 
 	hundo = 0;
 	tens = 0;
